--- a/index.html
+++ b/index.html
@@ -1,18 +1,33 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap Sample</title>
-    <!-- BootstrapのCSS読み込み -->
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <!-- jQuery読み込み -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- BootstrapのJS読み込み -->
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-  </body>
+ <head>
+  <meta charset="UTF-8">
+  <title>ryoto yamada</title>
+   <link rel="stylesheet" type="text/css" href="a.css">
+ </head>    
+ <body>
+  <h1 class="111" align="center">自己紹介</h1><hr>
+  <!--後で色付け-->
+  
+  <div>
+  <h2 class="111 222"align="center" >About</h2>
+  <p class="mrk">現在は、明治大学付属中野高校に在学しながら<a href="https://techacademy.jp/campus/shibuya">Tech Academy渋谷校</a>に通いプログラミングを学習中。</p>
+  <p class="def">・以前は水球部に所属。<br>
+  ・中学１年(2014/4~2015/3)では、JOC（中学生の全国大会)に春夏共に出場。<br>
+  ・中学２年(2015/4~2014/3)JOC（中学生の全国大会)に春夏共に出場。U15東京都代表として、U15 All Japan Yuoth Water POLO Gamechnpionsip（桃太郎カップ）に出場し、全国4位になる。<br>
+  ・中学３年(2015/4~2016/3)ではめキャプテンに就任。チームを春夏共に全国大会に導く。また、U15 桃太郎カップにて得点ランキング、退水初誘発ランキング共に全国4位となる(チームは全国3位),
+  U17　All Japan Yuoth Water POLO Gamechnpionsip(柏崎 潮風カップ)の東京都代表選手に最年少として選出され全国3位。</p>
+  <p>・高校入学後には官民一体留学奨学金制度の
+   <a href="http://www.tobitate.mext.go.jp/hs/">トビタテJAPAN日本代表</a>
+  としてカナダに短期留学。</p>
+  </div>
+  <hr>
+  <h3>
+   <p align="center"><strong>趣味</strong></p>
+  </h3>
+   <p class="ooo" align="center">映画鑑賞,海外ドラマ鑑賞,読書,ロードバイク,スキューバダイビング.ect</p>
+  
+
+ </body>
 </html>
+
