--- a/index.html
+++ b/index.html
@@ -1,33 +1,79 @@
 <!DOCTYPE html>
-<html lang="ja">
- <head>
+ <html lang="ja">
+  <head>
   <meta charset="UTF-8">
-  <title>ryoto yamada</title>
-   <link rel="stylesheet" type="text/css" href="a.css">
- </head>    
+  <meta name="description" contect="TechAcademy渋谷校,github">
+   <title>ryoto yamada</title>
+   
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- jQuery読み込み -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- BootstrapのJS読み込み -->
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="a.css">
+  </head>
+  
+  
  <body>
-  <h1 class="111" align="center">自己紹介</h1><hr>
+  <header>
+  <h1 class="111" align="center"><strong>自己紹介</strong><br>
+ </h1><hr><br>
+ 
+ <div id="logo">
+  <h1  align="center"><strong>Ryoto Yamada</strong><br></h1>
+  <img src="pictures/redbull.jpg" alt="">
+ </div>
+  </header>
   <!--後で色付け-->
   
-  <div>
+ 
   <h2 class="111 222"align="center" >About</h2>
+  <div class="box">
   <p class="mrk">現在は、明治大学付属中野高校に在学しながら<a href="https://techacademy.jp/campus/shibuya">Tech Academy渋谷校</a>に通いプログラミングを学習中。</p>
   <p class="def">・以前は水球部に所属。<br>
   ・中学１年(2014/4~2015/3)では、JOC（中学生の全国大会)に春夏共に出場。<br>
   ・中学２年(2015/4~2014/3)JOC（中学生の全国大会)に春夏共に出場。U15東京都代表として、U15 All Japan Yuoth Water POLO Gamechnpionsip（桃太郎カップ）に出場し、全国4位になる。<br>
-  ・中学３年(2015/4~2016/3)ではめキャプテンに就任。チームを春夏共に全国大会に導く。また、U15 桃太郎カップにて得点ランキング、退水初誘発ランキング共に全国4位となる(チームは全国3位),
+  ・中学３年(2015/4~2016/3)ではキャプテンに就任。チームを春夏共に全国大会に導く。また、U15 桃太郎カップにて得点ランキング、退水初誘発ランキング共に全国4位となる(チームは全国3位),
   U17　All Japan Yuoth Water POLO Gamechnpionsip(柏崎 潮風カップ)の東京都代表選手に最年少として選出され全国3位。</p>
   <p>・高校入学後には官民一体留学奨学金制度の
    <a href="http://www.tobitate.mext.go.jp/hs/">トビタテJAPAN日本代表</a>
   としてカナダに短期留学。</p>
   </div>
+ 
   <hr>
-  <h3>
-   <p align="center"><strong>趣味</strong></p>
-  </h3>
-   <p class="ooo" align="center">映画鑑賞,海外ドラマ鑑賞,読書,ロードバイク,スキューバダイビング.ect</p>
-  
 
+   <h3>
+    <p align="center"><strong>趣味</strong></p><br><br>
+   
+   </h3>
+  <div class="hobby">
+    <p class="ooo" align="center">映画鑑賞,海外ドラマ鑑賞,読書,ロードバイク,スキューバダイビング.ect</p><br><hr>
+  </div>
+ 
+  <hr>
+ 
+  <h3>
+   <p align="center">リンク</p>
+  </h3> 
+  
+   <div class="rink">
+     <p align="center">メールアドレス:ryoto.yamada.techacademy@gmail.com<br>
+      <a href="https://github.com/MrRYJ">GitHubのユーザページ </a><br>
+      <a href="contact.html">ご質問などありましたらなどありましたらこちらまで</a>
+     </p><hr>    
+   </div>
+   <!---ここから作品紹介-->
+   <h2>
+    <p align="center">作品紹介</p>
+   </h2>
+  <div class="container"> 
+   <div class="row">
+	 	 <div class="col-xs-3 image-warpper"><img class="a" src="pictures/bg.jpg" ></div>
+		  <div class="col-xs-3 image-warpper"><img class="a" src="pictures/redbull.jpg" ></div>
+		  <div class="col-xs-3 image-warpper"><img class="a" src="pictures/iphone.jpg" ></div>
+		  <div class="col-xs-3 image-warpper"><img class="a" src="pictures/code.jpg"  ></div>
+	  </div>
+	 </div>
  </body>
 </html>
 
