--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
  <html lang="ja">
   <head>
-  <meta charset="UTF-8">
-  <meta name="description" contect="TechAcademy渋谷校,github">
+  <meta charset="utf-8">
+  <meta name="description" content="TechAcademy渋谷校,github">
    <title>ryoto yamada</title>
    
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -16,18 +16,17 @@
   
  <body>
   <header>
-  <h1 class="111" align="center"><strong>自己紹介</strong><br>
+  <h1><strong>自己紹介</strong><br>
  </h1><hr><br>
  
  <div id="logo">
-  <h1  align="center"><strong>Ryoto Yamada</strong><br></h1>
+  <h1><strong>Ryoto Yamada</strong><br></h1>
   <img src="pictures/redbull.jpg" alt="">
  </div>
   </header>
   <!--後で色付け-->
   
- 
-  <h2 class="111 222"align="center" >About</h2>
+  <h2 class="111">About</h2>
   <div class="box">
   <p class="mrk">現在は、明治大学付属中野高校に在学しながら<a href="https://techacademy.jp/campus/shibuya">Tech Academy渋谷校</a>に通いプログラミングを学習中。</p>
   <p class="def">・以前は水球部に所属。<br>
@@ -39,41 +38,41 @@
    <a href="http://www.tobitate.mext.go.jp/hs/">トビタテJAPAN日本代表</a>
   としてカナダに短期留学。</p>
   </div>
- 
   <hr>
-
+ 
    <h3>
-    <p align="center"><strong>趣味</strong></p><br><br>
-   
+    <strong>趣味</strong><br><br>
    </h3>
+  
   <div class="hobby">
-    <p class="ooo" align="center">映画鑑賞,海外ドラマ鑑賞,読書,ロードバイク,スキューバダイビング.ect</p><br><hr>
+    <p class="ooo">映画鑑賞,海外ドラマ鑑賞,読書,ロードバイク,スキューバダイビング.ect</p><br><hr>
   </div>
  
   <hr>
  
   <h3>
-   <p align="center">リンク</p>
+   リンク
   </h3> 
   
    <div class="rink">
-     <p align="center">メールアドレス:ryoto.yamada.techacademy@gmail.com<br>
+     <p class="contact">メールアドレス:ryoto.yamada.techacademy@gmail.com<br>
       <a href="https://github.com/MrRYJ">GitHubのユーザページ </a><br>
       <a href="contact.html">ご質問などありましたらなどありましたらこちらまで</a>
      </p><hr>    
    </div>
    <!---ここから作品紹介-->
    <h2>
-    <p align="center">作品紹介</p>
+    作品紹介
    </h2>
   <div class="container"> 
    <div class="row">
-	 	 <div class="col-xs-3 image-warpper"><img class="a" src="pictures/bg.jpg" ></div>
-		  <div class="col-xs-3 image-warpper"><img class="a" src="pictures/redbull.jpg" ></div>
-		  <div class="col-xs-3 image-warpper"><img class="a" src="pictures/iphone.jpg" ></div>
-		  <div class="col-xs-3 image-warpper"><img class="a" src="pictures/code.jpg"  ></div>
+	 	 <div class="col-xs-3 image-warpper"><img class="a" src="pictures/bg.jpg" alt="computer"></div>
+		  <div class="col-xs-3 image-warpper"><img class="a" src="pictures/redbull.jpg" alt="redbull"></div>
+		  <div class="col-xs-3 image-warpper"><img class="a" src="pictures/iphone.jpg" alt="iphone" ></div>
+		  <div class="col-xs-3 image-warpper"><img class="a" src="pictures/code.jpg" alt="code" ></div>
 	  </div>
 	 </div>
  </body>
 </html>
+
 
